Add advanced algorithms: Association Rule Mining, Clustering, Regression Analysis, and Text Mining
- Implemented Association Rule Mining using the Apriori Algorithm in AssociationRuleMiningDemo.java.
- Developed K-Means Clustering algorithm in ClusteringDemo.java.
- Added Linear Regression analysis functionality in RegressionAnalysisDemo.java.
- Created a Text Mining pipeline with TF-IDF and Cosine Similarity in TextMiningDemo.java.
- Updated README.md to reflect new programs and their descriptions.
- Enhanced VisualizationJavaFXDemo.java for data visualization of algorithm performance.